Fix footer gap

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -22,7 +22,7 @@ footer {
 
 #footer {
     position: absolute;
-    top: 0;
+    top: -6px;
     left: 0;
     width: 100%;
     height: 100%;
